[package]
name = "routerify-unixsocket"
version = "0.1.1"
authors = ["Mathieu Rene <mathieu.rene@gmail.com>"]
edition = "2018"
description = "Use hyperlocal with routerify to add local unix socket support"
repository = "https://github.com/routerify/routerify-unixsocket"
license = "MIT OR Apache-2.0"
keywords = ["hyper", "routerify", "hyperlocal", "unix", "http"]
categories = ["asynchronous", "web-programming", "web-programming::http-server"]

[dependencies]
hyper = "0.14.4"
hyperlocal = "0.8.0"
routerify = "2.0.0"
tokio = { version="1.4.0", features=["net", "macros"] }
tower = { version = "0.4.6", features=["util"] }

[dev-dependencies]
futures = "0.3.13"
